# btfparse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  a
.github/workflows/: check.yml  clippy.yml  format.yml  main.yml  posix_build.yml
.github/workflows/jobs/: check.yml  clippy.yml  posix_build.yml
.github/workflows/scripts/: install_rust.sh
btfparse/: Cargo.toml
btfparse/src/: lib.rs
btfparse/src/btf/: array.rs  const.rs  data_sec.rs  decl_tag.rs  define_type.rs  enum.rs  enum64.rs  error.rs  file_header.rs  float.rs  func.rs  func_proto.rs  fwd.rs  header.rs  int.rs  kind.rs  mod.rs  offset.rs  ptr.rs  readable.rs  restrict.rs  string.rs  struct_union.rs  type.rs  type_header.rs  type_information.rs  type_tag.rs  typedef.rs  var.rs  volatile.rs
btfparse/src/btf/parser/: array.rs  btf_header.rs  const_type.rs  enum32.rs  int.rs  mod.rs  ptr.rs  string.rs  type_data.rs  type_enum.rs  type_header.rs  type_kind.rs  typedef.rs  volatile.rs
btfparse/src/utils/: mod.rs  readable_buffer.rs  reader.rs
dump-btf/: Cargo.toml
dump-btf/src/: main.rs
examples/: dump-btf.rs  get-type-offset.rs  get-type-size.rs
src/: lib.rs
src/btf/: array.rs  const.rs  data_sec.rs  decl_tag.rs  define_type.rs  enum.rs  enum64.rs  file_header.rs  float.rs  func.rs  func_proto.rs  fwd.rs  header.rs  int.rs  kind.rs  offset.rs  ptr.rs  restrict.rs  string.rs  struct_union.rs  type.rs  type_information.rs  type_tag.rs  typedef.rs  var.rs  volatile.rs
src/utils/: mod.rs  readable_buffer.rs  reader.rs
tools/: Cargo.toml
