#
# Copyright (c) 2024-present, Alessandro Gario
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "btfparse"
version = "1.3.4"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "A BTF parser library capable of navigating types"
homepage = "https://github.com/alessandrogario"
repository = "https://github.com/alessandrogario/btfparse/"
keywords = ["bpf", "btf", "ebpf"]
categories = ["development-tools"]

exclude = [
  ".gitignore",
  ".github/*"
]
