#
# Copyright (c) 2024-present, Alessandro Gario
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "tools"
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Example tools for the btfparse crate"
homepage = "https://github.com/alessandrogario"
repository = "https://github.com/alessandrogario/btfparse/"
keywords = ["bpf", "btf"]
category = "development-tools"

[dependencies]
btfparse = { path = "../btfparse" }
